--- a/index.html
+++ b/index.html
@@ -9,8 +9,148 @@
 </head>
 <body>
 
-        
+    <section class="py-5">
+        <div class="container-fluid">
+            <hr/>
+            <div class="row">
+                <div class="col-12">
+                    <h5>বিশ্ব <span class="text-danger font-weight-bold">&gt;</span> </h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 border-right">
+                    <div class="card border-0">
+                        <img src="img/b1.jpg" alt="" class="card-img-top"/>
+                        <div class="card-body px-0">
+                            <h5 class="card-title font-weight-bold">এবার অমিক্রনের উপধরন যেসব প্রশ্ন সামনে এনেছে</h5>
+                            <p class="card-text text-secondary p-size">বিশ্বজুড়ে করোনাভাইরাসের সংক্রমণ বৃদ্ধিতে বর্তমানে সবচেয়ে প্রভাব বিস্তার করছে অমিক্রন। কিন্তু সম্প্রতি ব্রিটিশ সরকারের স্বাস্থ্য বিভাগ এটা নিশ্চিত করতে পেরেছে যে অমিক্রনের সর্বশেষ ভার্সনে ১০০ জনের ...</p>
+                            <h5 class="text-muted p-size"><sub>১৭ মিনিট আগে</sub></h5>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-md-6 ">
+                    <div class="card border-0">
+                        <div class="row no-gutters">
+                            <div class="col-4">
+                                <img src="img/b2.jpg" alt="" class="card-img-top"/>
+                            </div>
+                            <div class="col-8 p-0">
+                                <div class="card-body py-0">
+                                    <h5 class="card-title font-weight-bold">ক্যামেরুনে স্টেডিয়ামে পদদলিত হয়ে নিহত ৬, আহত বহু</h5>
+                                    <p class="card-text text-secondary pb-size">ঘটনার সময়ের একটি ভিডিওতে দেখা যায়, স্টেডিয়ামে প্রবেশের জন্য ধাক্কাধাক্কি করছেন ফুটবলপ্রেমীরা। সেখানেই পদদলিত হওয়ার ঘটনা ঘটে। ওই স্টেডিয়ামের ধারণক্ষমতা ৬০ হাজার। তবে করোনা...</p>
+                                    <p class="card-text text-muted pb-size">৩ ঘণ্টা আগে</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="card border-0">
+                        <div class="row no-gutters">
+                            <div class="col-4">
+                                <img src="img/b3.jpg" alt="" class="card-img-top"/>
+                            </div>
+                            <div class="col-8 p-0">
+                                <div class="card-body py-0">
+                                    <h5 class="card-title font-weight-bold">জার্মানির হাইডেলবার্গ বিশ্ববিদ্যালয়ে গুলি, নিহত ১</h5>
+                                    <p class="card-text text-secondary pb-size">হামলার ঘটনায় প্রাথমিকভাবে চারজনের আহত হওয়ার খবর জানায় পুলিশ। তবে পরে জানানো হয়, হাসপাতালে একজনের মৃত্যু হয়েছে। এদিকে হামলার পেছনে ধর্মীয় বা রাজনৈতিক কোনো...</p>
+                                    <p class="card-text text-muted pb-size">৫ ঘণ্টা আগে</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="card border-0">
+                        <div class="row no-gutters">
+                            <div class="col-4">
+                                <img src="img/b4.jpg" alt="" class="card-img-top"/>
+                            </div>
+                            <div class="col-8 p-0">
+                                <div class="card-body py-0">
+                                    <h5 class="card-title font-weight-bold">ইউরোপে সামরিক শক্তি বাড়াল ন্যাটো</h5>
+                                    <p class="card-text text-secondary pb-size">ইউক্রেনে সম্ভাব্য রুশ সামরিক হামলার আঁচ পেয়ে পূর্ব ইউরোপে সামরিক শক্তি বৃদ্ধি করছে পশ্চিমা সামরিক জোট ন্যাটো। ওই অঞ্চলে যুদ্ধবিমান ও যুদ্ধজাহাজ প্রস্তুত রেখেছে জোটটি। এদিকে...</p>
+                                    <p class="card-text text-muted pb-size">৯ ঘণ্টা আগে</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr/>
+        </div>
+    </section>
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm bg-success h-200"></div>
+                <div class="col-sm bg-info h-200"></div>
+                <div class="col-sm bg-dark h-200"></div>
+                <div class="col-sm bg-warning h-200"></div>
+                <div class="col-sm bg-danger h-200"></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="firstName">First Name:</label>
+                        <input type="text" id="firstName" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastName">Last Name:</label>
+                        <input type="text" id="lastName" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone:</label>
+                        <input type="number" id="phone" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address:</label>
+                        <textarea id="address" class="form-control"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label >District Name:</label>
+                        <select class="form-control">
+                            <option value="">--Select your District</option>
+                            <option value="">Dhaka</option>
+                            <option value="">Narayangonj</option>
+                            <option value="">Gazipur</option>
+                            <option value="">Pabna</option>
+                            <option value="">Chadpur</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Gender:</label>
+                        <div>
+                           <label><input type="radio" id="email" name="gender"/>Male</label>
+                           <label><input type="radio" id="email" name="gender"/>Female</label>
+                           <label><input type="radio" id="email" name="gender"/>Others</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Image:</label>
+                        <input type="file" class="form-control-file"/>
+                    </div>
+                    <div class="form-group">
+                        <label>Date of birth:</label>
+                        <input type="date" class="form-control"/>
+                    </div>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="js/bootstrap.js"></script>
