--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
                         <label>Date of birth:</label>
                         <input type="date" class="form-control"/>
                     </div>
+                    <div class="form-group">
+                        <label><input type="checkbox"/> I agree with all the terms and conditions</label>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-outline-success" value="Submit">
+                    </div>
                 </div>
                 <div class="col-md-6"></div>
             </div>
