--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/all.css"/>
 
 </head>
 <body>
@@ -131,7 +132,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="email">Gender:</label>
+                        <label>Gender:</label>
                         <div>
                            <label><input type="radio" id="email" name="gender"/>Male</label>
                            <label><input type="radio" id="email" name="gender"/>Female</label>
@@ -153,10 +154,168 @@
                         <input type="submit" class="btn btn-outline-success" value="Submit">
                     </div>
                 </div>
-                <div class="col-md-6"></div>
+                <div class="col-md-6">
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">First Name:</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Last Name:</label>
+                        <div class="col-md-9">
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Email:</label>
+                        <div class="col-md-9">
+                            <input type="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Password:</label>
+                        <div class="col-md-9">
+                            <input type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Phone:</label>
+                        <div class="col-md-9">
+                            <input type="Number" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Address:</label>
+                        <div class="col-md-9">
+                            <textarea id="address" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">District name:</label>
+                        <div class="col-md-9">
+                            <select class="form-control">
+                                <option value="">--Select your District</option>
+                                <option value="">Dhaka</option>
+                                <option value="">Narayangonj</option>
+                                <option value="">Gazipur</option>
+                                <option value="">Pabna</option>
+                                <option value="">Chadpur</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Gender:</label>
+                        <div class="col-md-9">
+                            <div>
+                                <label><input type="radio" id="email" name="gender"/>Male</label>
+                                <label><input type="radio" id="email" name="gender"/>Female</label>
+                                <label><input type="radio" id="email" name="gender"/>Others</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Image:</label>
+                        <div class="col-md-9">
+                            <input type="file" class="form-control-file"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label">Date of Birth:</label>
+                        <div class="col-md-9">
+                            <input type="date" class="form-control"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <label><input type="checkbox"/> I agree with all the terms and conditions</label>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <input type="submit" class="btn btn-outline-success btn-block" value="Submit">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="row">
+                    <div class="col-md-12">
+                        <div class="card card-body">
+                            <table class="table table-bordered table-striped table-hover">
+                                <thead class="table-dark">
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>Mobile</th>
+                                        <th>Address</th>
+                                        <th>District</th>
+                                        <th>Image</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>BITM</td>
+                                        <td>bitm@gmail.com</td>
+                                        <td>12345678</td>
+                                        <td>Karwan Bazar</td>
+                                        <td>Dhaka</td>
+                                        <td>Bangladesh</td>
+                                        <td>Asia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>BITM</td>
+                                        <td>bitm@gmail.com</td>
+                                        <td>12345678</td>
+                                        <td>Karwan Bazar</td>
+                                        <td>Dhaka</td>
+                                        <td>Bangladesh</td>
+                                        <td>Asia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>BITM</td>
+                                        <td>bitm@gmail.com</td>
+                                        <td>12345678</td>
+                                        <td>Karwan Bazar</td>
+                                        <td>Dhaka</td>
+                                        <td>Bangladesh</td>
+                                        <td>Asia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>BITM</td>
+                                        <td>bitm@gmail.com</td>
+                                        <td>12345678</td>
+                                        <td>Karwan Bazar</td>
+                                        <td>Dhaka</td>
+                                        <td>Bangladesh</td>
+                                        <td>Asia</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <div class="container-fluid">
+        <a href="" class="btn btn-info btn-sm">
+            <i class="fa fa-edit"></i>
+        </a>
+        <a href="" class="btn btn-dark btn-sm">
+            <i class="fa fa-trash"></i>
+        </a>
+        <a href="" class="btn btn-danger btn-sm">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
 
 
     <script src="js/bootstrap.js"></script>
